--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -1,248 +1,251 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: "Montserrat", sans-serif;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
+  list-style: none;
 }
 
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    min-height: 100%;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
+  min-height: 100%;
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 /* header & navbar */
-
 .nav-links li a {
-    font-size: 18px;
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
-    transition: all 0.3s ease 0s;
+  font-size: 18px;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    margin-bottom: 50px;
-    position: sticky;
-    top: 0;
-    background-color: white;
-    z-index: 99;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 15px;
+  margin-bottom: 50px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  z-index: 99;
 }
 
 .logo {
-    width: 110px;
-    padding: 10px 20px;
+  width: 110px;
+  padding: 10px 20px;
 }
 
 .logo:hover {
-    transform: scale(0.95);
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
 }
 
-.nav-links{
-    margin-right: 20px;
+.nav-links {
+  margin-right: 20px;
 }
 
 .nav-links li {
-    display: inline-block;
-    padding: 0px 12px;
+  display: inline-block;
+  padding: 0px 12px;
 }
 
 .nav-links li a:hover {
-    color: #43FFA8;
+  color: #43FFA8;
 }
 
 /* nosotros page & livestream page */
-
 .content {
-    display: flex;
-    justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .content .text {
-    width: 1200px;
-    font-size: 60px;
-    font-weight: bold;
+  width: 1200px;
+  font-size: 60px;
+  font-weight: bold;
 }
 
 /* contacto page */
-
 .container {
-    display: flex;
-    justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .container p {
-    font-weight: bold;
-    font-size: 35px;
-    margin-bottom: 10px;
+  font-weight: bold;
+  font-size: 35px;
+  margin-bottom: 10px;
 }
 
 .container label {
-    font-weight: 500;
+  font-weight: 500;
 }
 
-.container input, textarea {
-    display: block;
-    width: 100%;
-    border: 1px solid lightgrey;
-    border-radius: 4px;
-    box-sizing: border-box;
-    resize: none;
-    margin: 0;
-    margin-bottom: 10px;
-    padding: 6px 12px;
+.container input {
+  display: block;
+  width: 100%;
+  border: 1px solid lightgrey;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  resize: none;
+  margin: 0;
+  margin-bottom: 10px;
+  padding: 6px 12px;
+}
+
+textarea {
+  display: block;
+  width: 100%;
+  border: 1px solid lightgrey;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  resize: none;
+  margin: 0;
+  margin-bottom: 10px;
+  padding: 6px 12px;
 }
 
 .container textarea {
-    height: 150px;
+  height: 150px;
 }
 
 button[type=submit] {
-    width: 100%;
-    background-color: #43FFA8;
-    color: black;
-    font-weight: bold;
-    padding: 6px 12px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  width: 100%;
+  background-color: #43FFA8;
+  color: black;
+  font-weight: bold;
+  padding: 6px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 button[type=submit]:hover {
-    color: white;
-    transition: all 0.3s ease 0s;
+  color: white;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 
 /* trabajos page */
-
 .grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    grid-gap: 30px;
-    margin: 40px;
-    margin-top: 0;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(400px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-gap: 30px;
+  margin: 40px;
+  margin-top: 0;
 }
 
 .grid div {
-    cursor: pointer; 
-    transition: all 0.3s ease-out; 
-    background: #43FFA8;
-    height: 300px;
-    background-size: cover;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  background: #43FFA8;
+  height: 300px;
+  background-size: cover;
 }
 
 .grid .img-1 {
-    background-image: url(../../components/wallpaper1.jpg)
+  background-image: url(../../components/wallpaper1.jpg);
 }
 
 .grid .img-2 {
-    background-image: url(../../components/wallpaper2.jpg)
+  background-image: url(../../components/wallpaper2.jpg);
 }
 
 .grid .img-3 {
-    background-image: url(../../components/wallpaper3.jpg)
+  background-image: url(../../components/wallpaper3.jpg);
 }
 
 .grid .img-4 {
-    background-image: url(../../components/wallpaper4.jpg)
+  background-image: url(../../components/wallpaper4.jpg);
 }
 
 .grid .img-5 {
-    background-image: url(../../components/wallpaper5.jpg)
+  background-image: url(../../components/wallpaper5.jpg);
 }
 
 .grid .img-6 {
-    background-image: url(../../components/wallpaper6.jpg)
+  background-image: url(../../components/wallpaper6.jpg);
 }
 
 .grid .img-7 {
-    background-image: url(../../components/wallpaper7.jpg)
+  background-image: url(../../components/wallpaper7.jpg);
 }
 
 .grid .img-8 {
-    background-image: url(../../components/wallpaper8.jpg)
+  background-image: url(../../components/wallpaper8.jpg);
 }
 
-.grid .img-1:hover {
-    opacity: 0.8;
-    transform: scale(1.01);
-}
-
-.grid .img-2:hover {
-    opacity: 0.8;
-    transform: scale(1.01);
-}
-
-.grid .img-3:hover {
-    opacity: 0.8;
-    transform: scale(1.01);
-}
-
-.grid .img-4:hover {
-    opacity: 0.8;
-    transform: scale(1.01);
-}
-
-.grid .img-5:hover {
-    opacity: 0.8;
-    transform: scale(1.01);
-}
-
-.grid .img-6:hover {
-    opacity: 0.8;
-    transform: scale(1.01);
-}
-
-.grid .img-7:hover {
-    opacity: 0.8;
-    transform: scale(1.01);
-}
-
-.grid .img-8:hover {
-    opacity: 0.8;
-    transform: scale(1.01);
+.grid .img-1:hover, .grid .img-2:hover, .grid .img-3:hover, .grid .img-4:hover, .grid .img-5:hover, .grid .img-6:hover, .grid .img-7:hover, .grid .img-8:hover {
+  opacity: 0.8;
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
 }
 
 /* pages footer */
-
 footer {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    font-size: 13px;
-    padding: 25px 0px;
-    background-color: #EAEAEA;
-    margin-top: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 100%;
+  font-size: 13px;
+  padding: 25px 0px;
+  background-color: #EAEAEA;
+  margin-top: auto;
 }
 
 footer div {
-    margin-right: 50px;
+  margin-right: 50px;
 }
 
 footer a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 footer li {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .info {
-    font-weight: bold;
-    font-size: 15px;
-    margin-bottom: 5px;
+  font-weight: bold;
+  font-size: 15px;
+  margin-bottom: 5px;
 }
 
 /* @media (max-width: 768px) { 
   }*/
- 
