Applied media query to adapt pages to mobile

--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -247,5 +247,58 @@ footer li {
   margin-bottom: 5px;
 }
 
-/* @media (max-width: 768px) { 
-  }*/
+@media (max-width: 768px) {
+  header {
+    margin-bottom: 30px;
+  }
+  .content .text {
+    width: 600px;
+    font-size: 59px;
+    font-weight: bold;
+  }
+}
+
+@media (max-width: 376px) {
+  header {
+    margin-bottom: 30px;
+  }
+  header .logo {
+    width: 80px;
+    padding: 10px 16px;
+  }
+  header .nav-links li {
+    display: inline-block;
+    padding: 0px 2px;
+  }
+  header .nav-links li a {
+    font-size: 9px;
+  }
+  .content .text {
+    width: 300px;
+    font-size: 30px;
+    font-weight: bold;
+  }
+  .grid {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 30px;
+    margin: 40px;
+    margin-top: 0;
+  }
+  .container p {
+    font-weight: bold;
+    font-size: 25px;
+    margin-bottom: 10px;
+  }
+  footer {
+    font-size: 10px;
+  }
+  footer .info {
+    font-size: 12px;
+  }
+  footer div {
+    margin-right: 0;
+  }
+}
