--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -256,6 +256,14 @@ footer li {
     font-size: 59px;
     font-weight: bold;
   }
+  .container {
+    margin-top: 130px;
+  }
+  .container p {
+    font-weight: bold;
+    font-size: 50px;
+    margin-bottom: 10px;
+  }
 }
 
 @media (max-width: 376px) {
