--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -274,6 +274,9 @@ footer li {
     width: 80px;
     padding: 10px 16px;
   }
+  header .nav-links {
+    margin-bottom: 10px;
+  }
   header .nav-links li {
     display: inline-block;
     padding: 0px 2px;
@@ -293,6 +296,9 @@ footer li {
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 30px;
     margin: 40px;
+    margin-top: 0;
+  }
+  .container {
     margin-top: 0;
   }
   .container p {
