--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -258,6 +258,7 @@ footer li {
   }
   .container {
     margin-top: 130px;
+    margin-bottom: 50px;
   }
   .container p {
     font-weight: bold;
