--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  min-height: 100%;
+  height: 100%;
   padding-top: 90px;
   background-color: white;
   display: -webkit-box;
@@ -20,6 +20,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-bottom: 90px;
 }
 
 /* header & navbar */
@@ -49,7 +50,7 @@ body {
   background-color: white !important;
 }
 
-.nav-link:hover {
+.navbar-collapse .navbar-nav .nav-item .nav-link:hover {
   color: #43FFA8;
 }
 
@@ -77,12 +78,17 @@ body {
 
 /* contacto page */
 .container {
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-bottom: 50px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .container p {
@@ -246,7 +252,6 @@ footer li {
     font-weight: bold;
   }
   .container {
-    margin-top: 130px;
     margin-bottom: 50px;
     line-height: 1.2;
   }
