--- a/resources/scss/pagestyle.scss
+++ b/resources/scss/pagestyle.scss
@@ -10,11 +10,12 @@ html {
 }
 
 body {
-  min-height: 100%;
+  height: 100%;
   padding-top: 90px;
   background-color: white;
   display: flex;
   flex-direction: column;
+  margin-bottom: 90px;
 }
 
 /* header & navbar */
@@ -43,7 +44,7 @@ body {
   background-color: white!important;
 }
 
-.nav-link:hover {
+.navbar-collapse .navbar-nav .nav-item .nav-link:hover {
     color: #43FFA8;
 }
 
@@ -67,8 +68,11 @@ body {
 /* contacto page */
 
 .container {
+  height: 100%;
   display: flex;
   justify-content: center;
+  margin-bottom: 50px;
+  align-items: center;
 
   p {
     font-weight: bold;
@@ -178,7 +182,6 @@ footer {
   }
 
   .container {
-    margin-top: 130px;
     margin-bottom: 50px;
     line-height: 1.2;
   
