--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -20,7 +20,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-bottom: 90px;
 }
 
 /* header & navbar */
@@ -74,6 +73,7 @@ body {
 .container-fluid p {
   font-size: 60px;
   font-weight: bold;
+  margin-bottom: 0;
 }
 
 /* contacto page */
@@ -94,7 +94,6 @@ body {
 .container p {
   font-weight: bold;
   font-size: 35px;
-  margin-bottom: 10px;
 }
 
 .container label {
@@ -215,7 +214,7 @@ footer {
       justify-content: space-around;
   width: 100%;
   font-size: 13px;
-  padding: 25px 0px;
+  padding: 5px;
   background-color: #EAEAEA;
   margin-top: auto;
 }
@@ -258,7 +257,6 @@ footer li {
   .container p {
     font-weight: bold;
     font-size: 50px;
-    margin-bottom: 10px;
   }
 }
 
@@ -282,7 +280,6 @@ footer li {
   .container p {
     font-weight: bold;
     font-size: 25px;
-    margin-bottom: 10px;
   }
   footer {
     font-size: 10px;
