--- a/resources/scss/pagestyle.scss
+++ b/resources/scss/pagestyle.scss
@@ -15,7 +15,6 @@ body {
   background-color: white;
   display: flex;
   flex-direction: column;
-  margin-bottom: 90px;
 }
 
 /* header & navbar */
@@ -62,6 +61,7 @@ body {
   p {
     font-size: 60px;
     font-weight: bold;
+    margin-bottom: 0;
   }
 }
 
@@ -77,7 +77,6 @@ body {
   p {
     font-weight: bold;
     font-size: 35px;
-    margin-bottom: 10px;
   }
 
   label {
@@ -140,7 +139,7 @@ footer {
   justify-content: space-around;
   width: 100%;
   font-size: 13px;
-  padding: 25px 0px;
+  padding: 5px;
   background-color: #EAEAEA;
   margin-top: auto;
 
@@ -188,7 +187,6 @@ footer {
     p {
       font-weight: bold;
       font-size: 50px;
-      margin-bottom: 10px;
     }
   } 
 }
@@ -215,7 +213,6 @@ footer {
     p {
       font-weight: bold;
       font-size: 25px;
-      margin-bottom: 10px;
     }
   } 
 
