--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -11,7 +11,6 @@ html {
 
 body {
   height: 100%;
-  padding-top: 90px;
   background-color: white;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -69,7 +68,6 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 60px;
   padding: 60px;
   line-height: 1.2;
 }
@@ -89,6 +87,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 50px;
+  margin-top: 90px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -154,7 +153,7 @@ body {
       grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   grid-gap: 30px;
   margin: 40px;
-  margin-top: 0;
+  margin-top: 90px;
 }
 
 .grid div {
@@ -208,8 +207,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   width: 100%;
   font-size: 13px;
   padding: 5px;
@@ -217,8 +217,8 @@ body {
   margin-top: auto;
 }
 
-.footer__section {
-  margin-right: 50px;
+.footer ul {
+  margin-bottom: 0;
 }
 
 .footer__text {
