--- a/resources/scss/_grid-images.scss
+++ b/resources/scss/_grid-images.scss
@@ -3,7 +3,7 @@
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   grid-gap: 30px;
   margin: 40px;
-  margin-top: 0;
+  margin-top: 90px;
 
   div {
     cursor: pointer;
