Cambié estilo de los links de redes del footer en hover

--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -236,6 +236,12 @@ body {
   color: black;
 }
 
+.footer__link:hover {
+  color: black;
+  -webkit-text-decoration-color: #43FFA8;
+          text-decoration-color: #43FFA8;
+}
+
 @media (max-width: 768px) {
   .logo {
     width: 100px;
