--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -70,7 +70,7 @@ body {
 .container-fluid ul {
   color: black;
   font-size: 80px;
-  font-weight: 700;
+  font-weight: bold;
   line-height: 1;
   text-align: center;
 }
