--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -69,7 +69,7 @@ body {
   ul {
     color: black;
     font-size: 80px;
-    font-weight: 700;
+    font-weight: bold;
     line-height: 1;
     text-align: center;
   }
