--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -285,3 +285,74 @@ body {
     font-size: 12px;
   }
 }
+
+@media (min-width: 901px) and (max-width: 1024px) and (orientation: landscape) {
+  .container-fluid .container-fluid__text {
+    font-size: 50px;
+    font-weight: bold;
+  }
+  .grid {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 30px;
+    margin: 40px;
+    margin-top: 0;
+  }
+  .container__text {
+    font-weight: bold;
+    font-size: 35px;
+  }
+  .container__textarea {
+    height: 70px;
+  }
+  .container__label {
+    font-size: 20px;
+  }
+  .footer {
+    font-size: 10px;
+  }
+  .footer__section {
+    margin-right: 0;
+  }
+  .footer__text {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 900px) and (orientation: landscape) {
+  .container-fluid .container-fluid__text {
+    margin-top: 30px;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  .grid {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 30px;
+    margin: 40px;
+    margin-top: 0;
+  }
+  .container__text {
+    font-weight: bold;
+    font-size: 25px;
+  }
+  .container__textarea {
+    height: 70px;
+  }
+  .container__label {
+    font-size: 15px;
+  }
+  .footer {
+    font-size: 10px;
+  }
+  .footer__section {
+    margin-right: 0;
+  }
+  .footer__text {
+    font-size: 12px;
+  }
+}
