--- a/resources/scss/pagestyle.scss
+++ b/resources/scss/pagestyle.scss
@@ -229,3 +229,92 @@ body {
     }
   }
 }
+
+@media (min-width:901px) and (max-width:1024px)  and (orientation: landscape){
+
+  .container-fluid .container-fluid__text {
+    font-size: 50px;
+    font-weight: bold;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 30px;
+    margin: 40px;
+    margin-top: 0;
+  }
+
+  .container {
+
+    &__text {
+      font-weight: bold;
+      font-size: 35px;
+    }
+
+    &__textarea {
+      height: 70px;
+    }
+
+    &__label {
+      font-size: 20px;
+    }
+  }
+
+  .footer {
+    font-size: 10px;
+
+    &__section {
+      margin-right: 0;
+    }
+
+    &__text {
+      font-size: 12px;
+    }
+  }
+}
+
+@media (min-width:320px) and (max-width:900px)  and (orientation: landscape){
+
+  .container-fluid .container-fluid__text {
+    margin-top: 30px;
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 30px;
+    margin: 40px;
+    margin-top: 0;
+  }
+
+  .container {
+
+    &__text {
+      font-weight: bold;
+      font-size: 25px;
+    }
+
+    &__textarea {
+      height: 70px;
+    }
+
+    &__label {
+      font-size: 15px;
+    }
+  }
+
+  .footer {
+    font-size: 10px;
+
+    &__section {
+      margin-right: 0;
+    }
+
+    &__text {
+      font-size: 12px;
+    }
+  }
+}
