--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -148,3 +148,25 @@ img {
     width: 25px;
   }
 }
+
+@media (min-width:320px) and (max-width:900px) and (orientation: landscape) {
+
+  .container-fluid {
+    margin-bottom: 100px;
+
+    ul {
+      color: black;
+      font-size: 30px;
+      font-weight: 700;
+    }
+  }
+
+  .logo {
+    width: 100px;
+    padding: 10px;
+  }
+
+  img {
+    width: 25px;
+  }
+}
