--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -323,7 +323,7 @@ body {
 
 @media (min-width: 320px) and (max-width: 900px) and (orientation: landscape) {
   .container-fluid .container-fluid__text {
-    margin-top: 30px;
+    margin-top: 60px;
     font-size: 20px;
     font-weight: bold;
   }
@@ -335,6 +335,9 @@ body {
     grid-gap: 30px;
     margin: 40px;
     margin-top: 0;
+  }
+  .container {
+    margin-top: 110px;
   }
   .container__text {
     font-weight: bold;
