--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -43,8 +43,8 @@ body {
   z-index: 99;
 }
 
-.bg-light {
-  background-color: $minty-green !important;
+.bg-custom {
+  background-color: $minty-green;
 }
 
 .logo {
