Cambios en menu collapse

--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -40,23 +40,19 @@ body {
   font-weight: bold;
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
-  text-align: right;
+  text-align: center;
 }
 
 .bg-custom {
   background-color: white;
 }
 
-.navbar-collapse {
-  height: 100vh;
-}
-
 .navbar-collapse .navbar-nav .nav-item .nav-link:hover {
   color: #43FFA8;
 }
 
-.active a {
-  color: #43FFA8 !important;
+.navbar-light .navbar-nav .active > .nav-link {
+  color: #43FFA8;
   background-color: white;
 }
 
@@ -250,6 +246,17 @@ body {
   .logo {
     width: 100px;
     padding: 10px;
+  }
+  .navbar-light .navbar-nav .nav-link {
+    font-size: 30px;
+  }
+  .navbar-collapse ul {
+    height: 100vh;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-transform: translate(0, -10%);
+            transform: translate(0, -10%);
   }
   .container-fluid {
     padding: 30px;
