--- a/resources/scss/_grid-images.scss
+++ b/resources/scss/_grid-images.scss
@@ -18,9 +18,26 @@
     }
   }
 
-  .grid__img-1 {
-    background-image: url(../../components/wallpaper1.jpg);
+  .video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
   }
+
+  .video-container iframe,
+  .video-container object,
+  .video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  // .grid__img-1 {
+  //   background-image: url(../../components/wallpaper1.jpg);
+  // }
 
   .grid__img-2 {
     background-image: url(../../components/wallpaper2.jpg);
