--- a/resources/scss/pagestyle.scss
+++ b/resources/scss/pagestyle.scss
@@ -191,7 +191,7 @@ body {
   }
 
   .navbar-light .navbar-nav .nav-link {
-    font-size: 50px;;
+    font-size: 30px;;
   }
 
   .navbar-collapse ul{
@@ -215,17 +215,22 @@ body {
 
 @media (max-width: 576px) {
 
-  .container-fluid .container-fluid__text {
-    font-size: 20px;
-    font-weight: bold;
-  }
+  .container-fluid {
+    
+    display: inline-block;
+
+    .container-fluid__text {
+      font-size: 20px;
+      font-weight: bold;
+    }
+}
 
   .grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 30px;
     margin: 40px;
-    margin-top: 0;
+    margin-top: 120px;
   }
 
   .container {
@@ -261,7 +266,7 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 30px;
     margin: 40px;
-    margin-top: 0;
+    margin-top: 120px;
   }
 
   .container {
@@ -306,7 +311,7 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 30px;
     margin: 40px;
-    margin-top: 0;
+    margin-top: 120px;
   }
 
   .container {
