--- a/resources/scss/pagestyle.scss
+++ b/resources/scss/pagestyle.scss
@@ -197,7 +197,7 @@ body {
   .navbar-collapse ul{
     height:100vh;
     justify-content: center;
-    transform: translate(0, -11%);
+    transform: translate(0, -10%);
     line-height: 1.25;
   }
 
@@ -215,15 +215,10 @@ body {
 
 @media (max-width: 576px) {
 
-  .container-fluid {
-    
-    display: inline-block;
-
-    .container-fluid__text {
+  .container-fluid .container-fluid__text {
       font-size: 20px;
       font-weight: bold;
-    }
-}
+  }
 
   .grid {
     display: grid;
