--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -353,6 +353,10 @@ body {
 }
 
 @media (min-width: 320px) and (max-width: 900px) and (orientation: landscape) {
+  .navbar-collapse ul {
+    -webkit-transform: translate(0, -20%);
+            transform: translate(0, -20%);
+  }
   .container-fluid .container-fluid__text {
     margin-top: 60px;
     font-size: 20px;
