--- a/resources/scss/pagestyle.scss
+++ b/resources/scss/pagestyle.scss
@@ -295,6 +295,10 @@ body {
 
 @media (min-width:320px) and (max-width:900px)  and (orientation: landscape){
 
+  .navbar-collapse ul{
+    transform: translate(0, -20%);
+  }
+
   .container-fluid .container-fluid__text {
     margin-top: 60px;
     font-size: 20px;
