--- a/resources/scss/pagestyle.scss
+++ b/resources/scss/pagestyle.scss
@@ -191,10 +191,11 @@ body {
   }
 
   .navbar-light .navbar-nav .nav-link {
-    font-size: 30px;;
+    font-size: 30px;
+    ;
   }
 
-  .navbar-nav{
+  .navbar-nav {
     min-height: 100vh;
     justify-content: center;
     transform: translate(0, -10%);
@@ -206,18 +207,13 @@ body {
     width: 100%;
 
     &__text {
-      font-size: 50px;
+      font-size: 25px;
       font-weight: bold;
     }
   }
 }
 
 @media (max-width: 576px) {
-
-  .container-fluid .container-fluid__text {
-      font-size: 25px;
-      font-weight: bold;
-  }
 
   .grid {
     display: grid;
@@ -248,12 +244,7 @@ body {
   }
 }
 
-@media (min-width:901px) and (max-width:1024px)  and (orientation: landscape){
-
-  .container-fluid .container-fluid__text {
-    font-size: 50px;
-    font-weight: bold;
-  }
+@media (min-width:901px) and (max-width:1024px) and (orientation: landscape) {
 
   .grid {
     display: grid;
@@ -292,16 +283,14 @@ body {
   }
 }
 
-@media (min-width:320px) and (max-width:900px)  and (orientation: landscape){
+@media (min-width:320px) and (max-width:900px) and (orientation: landscape) {
 
-  .navbar-collapse ul{
+  .navbar-collapse ul {
     transform: translate(0, -10%);
   }
 
   .container-fluid .container-fluid__text {
     margin-top: 60px;
-    font-size: 20px;
-    font-weight: bold;
   }
 
   .grid {
